# pingapka

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README_8md.html  annotated.html  annotated_dup.js  classMainWindow-members.html  classMainWindow.html  classPingapkaTest-members.html  classPingapkaTest.html  classes.html  files.html  files_dup.js  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  main_8cpp.html  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_8cpp.html  mainwindow_8h.html  mainwindow_8h_source.html  mainwindow_8ui.html  menudata.js  namespaceUi.html  namespaces.html  navtreedata.js  navtreeindex0.js  requirements.txt  test__pingapka_8cpp.html  test_pingapka.cpp
.github/workflows/: documentation.yml.txt  tests.yml
search/: all_0.js  all_1.js  all_10.js  all_13.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  files_1.js  functions_4.js  functions_5.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  related_0.js  searchdata.js  variables_1.js
